3B - update index menu

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -110,6 +110,7 @@
 						<li><a href="NEW_DESIGN/mobile/search-product-by-category.html">Search Product By Category</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-not-found.html">Search Not Found</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-hot-today.html">Product Hot Today</a></li>
+						<li><a href="NEW_DESIGN/mobile/product-recommend.html">Product Recommend</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
