--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -111,6 +111,7 @@
 						<li><a href="NEW_DESIGN/mobile/search-not-found.html">Search Not Found</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-hot-today.html">Product Hot Today</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-recommend.html">Product Recommend</a></li>
+						test
 					</ul>
 				</div>
 				<div class="clearfix"></div>
