--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -57,7 +57,7 @@
 
 								<svg width="24" height="19" viewBox="0 0 24 15" style="display: block;margin: 0 auto;">
 								<style type="text/css">
-									.st0{clip-path:url(#SVGID_2_);}
+									/*.st0{clip-path:url(#SVGID_2_);}*/
 									.st1{fill:#FFFFFF;}
 								</style>
 								<g>
