--- a/3B-WEB/NEW_DESIGN/mobile/search-product.html
+++ b/3B-WEB/NEW_DESIGN/mobile/search-product.html
@@ -14,7 +14,7 @@
 
 	<link rel="stylesheet" type="text/css" href="../../assets/base/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/base/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../../assets/plugins/select2/select2.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="../../assets/plugins/select2/select2.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="../../assets/base/mobile.css">
 
 </head>
@@ -598,7 +598,7 @@
 
 	<script src="../../assets/js/jquery.min.js"></script>
 	<script src="../../assets/js/bootstrap.min.js"></script>
-	<script src="../../assets/plugins/select2/select2.full.min.js"></script>
+	<!-- <script src="../../assets/plugins/select2/select2.full.min.js"></script> -->
 	<script src="../../assets/js/script_mobile.js"></script>
 </body>
 </html>
