3B - NEW_DESIGN - STORE_FEATURED_MOBILE - add page store-featured

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -111,7 +111,10 @@
 						<li><a href="NEW_DESIGN/mobile/search-not-found.html">Search Not Found</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-hot-today.html">Product Hot Today</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-recommend.html">Product Recommend</a></li>
-						test
+						<!-- <li><a href="NEW_DESIGN/mobile/product-details.html">Product Details</a></li> -->
+						<!-- <li><a href="NEW_DESIGN/mobile/brand-item.html">Brand Item</a></li> -->
+						<li><a href="NEW_DESIGN/mobile/store-featured.html">Featured Store</a></li>
+						<li><a href="NEW_DESIGN/mobile/list-all-categories.html">List All Categories</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
