3B - NEW_DESIGN - LIST_ALL_CATEGORY_MOBILE - add list-all-category page

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -48,7 +48,7 @@
 					<div class="col-xs-3">
 						<!-- BEGIN CART -->
 						<div class="cart txt-center">
-							<a href="view-all-categories.html" class="nav-mobile">
+							<a href="list-all-category.html" class="nav-mobile">
 								<img src="../../assets/images/new-design/icons-svg/nav-mobile.svg">
 								<span>Danh Mục</span>
 							</a>
@@ -412,7 +412,7 @@
 		<div class="featured-store container">
 			<div class="title">
 				<h3><img src="../../assets/images/new-design/icons/store.png"> Cửa hàng nổi bật</h3>
-				<a href="#">Xem tất cả <i class="fa fa-angle-right"></i></a>
+				<a href="store-featured.html">Xem tất cả <i class="fa fa-angle-right"></i></a>
 			</div>
 			<div class="boxes scroll-x">
 				<div class="box">
