--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -114,7 +114,7 @@
 						<!-- <li><a href="NEW_DESIGN/mobile/product-details.html">Product Details</a></li> -->
 						<!-- <li><a href="NEW_DESIGN/mobile/brand-item.html">Brand Item</a></li> -->
 						<li><a href="NEW_DESIGN/mobile/store-featured.html">Featured Store</a></li>
-						<li><a href="NEW_DESIGN/mobile/list-all-categories.html">List All Categories</a></li>
+						<li><a href="NEW_DESIGN/mobile/list-all-category.html">List All Category</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
