--- a/3B-WEB/NEW_DESIGN/mobile/search-product.html
+++ b/3B-WEB/NEW_DESIGN/mobile/search-product.html
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="col-xs-2">
 						<!-- BEGIN LOGO -->
-						<h1 class="logo txt-center"><a href="index.html"><img src="../../assets/images/new-design/icons-svg/logo-3b.svg"></a></h1>
+						<h1 class="logo txt-center"><a href="home.html"><img src="../../assets/images/new-design/icons-svg/logo-3b.svg"></a></h1>
 						<!-- /END LOGO -->
 					</div>
 					<div class="col-xs-7">
@@ -48,7 +48,7 @@
 					<div class="col-xs-3">
 						<!-- BEGIN CART -->
 						<div class="cart txt-center">
-							<a href="view-all-categories.html" class="nav-mobile">
+							<a href="list-all-category.html" class="nav-mobile">
 								<img src="../../assets/images/new-design/icons-svg/nav-mobile.svg">
 								<span>Danh Mục</span>
 							</a>
