3B - NEW_DESIGN - BRAND_ITEM_MOBILE - add brand-item page

--- a/3B-WEB/NEW_DESIGN/mobile/brand-item.html
+++ b/3B-WEB/NEW_DESIGN/mobile/brand-item.html
@@ -151,7 +151,8 @@
 		</header>
 		<!-- /END HEADER -->
 
-		<div class="featured-store-page">
+		<div class="brand-page">
+
 			<!-- BEGIN MENU CATEGORIES -->
 			<div class="menu-mobile container page">
 				<ul class="menu-container scroll-x">
@@ -219,148 +220,202 @@
 			</div>
 			<!-- /END MENU CATEGORIES -->
 
-			<!-- BEGIN FEATURED STORE -->
-			<div class="search-result boxes wrap">
-			
-				<!-- BEGIN BOX RESULT -->
-				<div class="box">
-					<div class="box-head">
-						<div class="details">
-							<img class="box-img" src="../../assets/images/img29.jpg">
-							<div class="s-title">
-								<h3><span class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</span></h3>
-								<div class="meta">
-									<label>Online</label>
-								</div>
-							</div>
-						</div>
-						<div class="actions">
-							<a href="#" class="btn btn-border-b">Theo dõi</a>
-							<a href="#" class="btn btn-border-b">Xem shop</a>
-						</div>
-					</div><!-- /end box-head -->
+			<div class="banner">
+				<img src="../../assets/images/new-design/banner.jpg">
+			</div><!-- /end banner -->
 
-					<div class="states margin-b20">
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/product.png"> 1200</div>
-							<label>Sản phẩm</label>
-						</div>
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/star-2.png"> 5.0</div>
-							<label>Đánh Giá</label>
-						</div>
-						<div class="item">
-							<div class="total">110</div>
-							<label>Theo dõi</label>
-						</div>
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/chat.png"> 100%</div>
-							<label>Tỉ lệ phản hồi</label>
-						</div>
-					</div><!-- /end states -->
-
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
+			<!-- BEGIN BRANDS -->
+			<div class="brands container">
+				<div class="title">
+					<h3>Thương hiệu</h3>
+					<a href="#">Xem tất cả</a>
+				</div>
+				<div class="scroll-x">
+					<ul>
+						<li><a href="#"><img src="../../assets/images/brands/canon.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/samsung.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/adidas.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/nike.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/puma.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/loreal.png"></a></li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="../../assets/images/brands/canon.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/samsung.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/adidas.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/nike.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/puma.png"></a></li>
+						<li><a href="#"><img src="../../assets/images/brands/loreal.png"></a></li>
 					</ul>
 				</div>
-				<!-- /END BOX RESULT -->
-
-				<!-- BEGIN BOX RESULT -->
-				<div class="box">
-					<div class="box-head">
-						<div class="details">
-							<img class="box-img" src="../../assets/images/img29.jpg">
-							<div class="s-title">
-								<h3><span class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</span></h3>
-								<div class="meta">
-									<label>Online</label>
-								</div>
-							</div>
-						</div>
-						<div class="actions">
-							<a href="#" class="btn btn-border-b">Theo dõi</a>
-							<a href="#" class="btn btn-border-b">Xem shop</a>
-						</div>
-					</div><!-- /end box-head -->
-
-					<div class="states margin-b20">
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/product.png"> 1200</div>
-							<label>Sản phẩm</label>
-						</div>
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/star-2.png"> 5.0</div>
-							<label>Đánh Giá</label>
-						</div>
-						<div class="item">
-							<div class="total">110</div>
-							<label>Theo dõi</label>
-						</div>
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/chat.png"> 100%</div>
-							<label>Tỉ lệ phản hồi</label>
-						</div>
-					</div><!-- /end states -->
-
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
-					</ul>
-				</div>
-				<!-- /END BOX RESULT -->
-
-				<!-- BEGIN BOX RESULT -->
-				<div class="box">
-					<div class="box-head">
-						<div class="details">
-							<img class="box-img" src="../../assets/images/img29.jpg">
-							<div class="s-title">
-								<h3><span class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</span></h3>
-								<div class="meta">
-									<label>Online</label>
-								</div>
-							</div>
-						</div>
-						<div class="actions">
-							<a href="#" class="btn btn-border-b">Theo dõi</a>
-							<a href="#" class="btn btn-border-b">Xem shop</a>
-						</div>
-					</div><!-- /end box-head -->
-
-					<div class="states margin-b20">
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/product.png"> 1200</div>
-							<label>Sản phẩm</label>
-						</div>
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/star-2.png"> 5.0</div>
-							<label>Đánh Giá</label>
-						</div>
-						<div class="item">
-							<div class="total">110</div>
-							<label>Theo dõi</label>
-						</div>
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/chat.png"> 100%</div>
-							<label>Tỉ lệ phản hồi</label>
-						</div>
-					</div><!-- /end states -->
-
-					<ul class="box-items">
-						<li><a href="#"><img src="../../assets/images/img30.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"></a></li>
-						<li><a href="#"><img src="../../assets/images/img29.jpg"><span>+126</span></a></li>
-					</ul>
-				</div>
-				<!-- /END BOX RESULT -->
-
 			</div>
-			<!-- /END FEATURED STORE -->
+			<!-- /END BRANDS -->
 
-			<div class="container">
+			<!-- BEGIN RECOMMEND PRODUCTS -->
+			<div class="recommend-p container">
+
+				<div class="results">
+					<!-- BEGIN CONTROL RESULT -->
+					<div class="boxes wrap margin-b10">
+						<div class="title"><h3>Sản phẩm gợi ý</h3></div>
+						<div class="filter-bl boxes wrap">
+							<div class="filter small">
+								<label>Nơi bán:</label>
+
+								<select class="box-control slb">
+									<option value="0">No Sort</option>
+									<option value="1" selected>Tất cả</option>
+									<option value="2">Hà Nội</option>
+									<option value="3">Hồ Chí Minh</option>
+									<option value="4">Đà Nẵn</option>
+									<option value="5">Lorem isum dolor set amit...</option>
+								</select>
+							</div>
+						</div>
+					</div>
+					<!-- /END CONTROL RESULT -->
+
+					<ul class="filter-nav">
+						<li class="active"><a href="#">All</a></li>
+						<li><a href="#">Newest</a></li>
+						<li><a href="#">Bestseller</a></li>
+						<li><a href="#">Rating</a></li>
+						<li><a href="#">Price ↓</a></li>
+					</ul>
+				</div>
+
+				<div class="boxes wrap margin-b10">
+					<div class="box-p">
+						<div class="box-p-wrap">
+							<div class="box-p-img">
+								<a href="#"><img src="../../assets/images/img29.jpg"></a>
+								<span class="rating-label">-50%</span>
+							</div>
+							<div class="box-p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../../assets/images/img30.jpg">
+										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
+									</div>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
+									<span class="p-price wrap-line w-break">1.125.000đ</span>
+								</div>
+								<div class="p-rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+					</div><!-- /end product -->
+
+					<div class="box-p">
+						<div class="box-p-wrap">
+							<div class="box-p-img">
+								<a href="#"><img src="../../assets/images/img29.jpg"></a>
+								<span class="rating-label">-50%</span>
+							</div>
+							<div class="box-p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../../assets/images/img30.jpg">
+										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
+									</div>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
+									<span class="p-price wrap-line w-break">189,000đ - 195,000đ</span>
+								</div>
+								<div class="p-rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+					</div><!-- /end product -->
+
+					<div class="box-p">
+						<div class="box-p-wrap">
+							<div class="box-p-img">
+								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
+							</div>
+							<div class="box-p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../../assets/images/img30.jpg">
+										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
+									</div>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Ngắn vch</h4></a>
+									<span class="p-price wrap-line w-break">100,989,000đ - 290,195,000đ</span>
+								</div>
+								<div class="p-rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+					</div><!-- /end product -->
+
+					<div class="box-p">
+						<div class="box-p-wrap">
+							<div class="box-p-img">
+								<a href="#"><img src="../../assets/images/img30.jpg"></a>
+								<span class="rating-label">-50%</span>
+							</div>
+							<div class="box-p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../../assets/images/img30.jpg">
+										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
+									</div>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Dài vừa vừa những cũng 2 dòng</h4></a>
+									<span class="p-price wrap-line w-break">1,089,000đ - 2,195,000đ</span>
+								</div>
+								<div class="p-rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+					</div><!-- /end product -->
+
+					<div class="box-p">
+						<div class="box-p-wrap">
+							<div class="box-p-img">
+								<a href="#"><img src="../../assets/images/img29.jpg"></a>
+								<span class="rating-label">-50%</span>
+							</div>
+							<div class="box-p-meta">
+								<div class="store-info">
+									<div class="store-name">
+										<img src="../../assets/images/img30.jpg">
+										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
+									</div>
+								</div>
+								<div class="p-name">
+									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
+									<span class="p-price wrap-line w-break">101.125.000đ</span>
+								</div>
+								<div class="p-rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
+							</div>
+						</div>
+					</div><!-- /end product -->
+				</div><!-- /end boxes -->
+				
 				<!-- BEGIN PAGINATION -->
 				<ul class="pagi no-pad">
 					<li><a href="#"><i class="fa fa-angle-left"></i></a></li>
@@ -371,6 +426,8 @@
 				</ul>
 				<!-- /END PAGINATION -->
 			</div>
+			<!-- /END RECOMMEND PRODUCTS -->
+
 		</div>
 
 		<!-- BEGIN FOOTER -->
