3B - NEW_DESIGN - FROM_1K_MOBILE - add from-1k page and small fix css for brand page

--- a/3B-WEB/NEW_DESIGN/mobile/from-1k.html
+++ b/3B-WEB/NEW_DESIGN/mobile/from-1k.html
@@ -224,65 +224,17 @@
 				<img src="../../assets/images/new-design/banner.jpg">
 			</div><!-- /end banner -->
 
-			<!-- BEGIN BRANDS -->
-			<div class="brands container">
-				<div class="title">
-					<h3>Thương hiệu</h3>
-					<a href="#">Xem tất cả</a>
-				</div>
-				<div class="scroll-x">
-					<ul>
-						<li><a href="#"><img src="../../assets/images/brands/canon.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/samsung.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/adidas.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/nike.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/puma.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/loreal.png"></a></li>
-					</ul>
-					<ul>
-						<li><a href="#"><img src="../../assets/images/brands/canon.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/samsung.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/adidas.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/nike.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/puma.png"></a></li>
-						<li><a href="#"><img src="../../assets/images/brands/loreal.png"></a></li>
-					</ul>
-				</div>
-			</div>
-			<!-- /END BRANDS -->
-
 			<!-- BEGIN RECOMMEND PRODUCTS -->
 			<div class="recommend-p container">
 
-				<div class="results">
-					<!-- BEGIN CONTROL RESULT -->
-					<div class="boxes wrap margin-b10">
-						<div class="title"><h3>Sản phẩm gợi ý</h3></div>
-						<div class="filter-bl boxes wrap">
-							<div class="filter small">
-								<label>Nơi bán:</label>
+				<div class="title margin-b10"><h3 class="txt-cap">Rẻ vô địch</h3></div>
 
-								<select class="box-control slb">
-									<option value="0">No Sort</option>
-									<option value="1" selected>Tất cả</option>
-									<option value="2">Hà Nội</option>
-									<option value="3">Hồ Chí Minh</option>
-									<option value="4">Đà Nẵn</option>
-									<option value="5">Lorem isum dolor set amit...</option>
-								</select>
-							</div>
-						</div>
-					</div>
-					<!-- /END CONTROL RESULT -->
-
-					<ul class="filter-nav">
-						<li class="active"><a href="#">All</a></li>
-						<li><a href="#">Newest</a></li>
-						<li><a href="#">Bestseller</a></li>
-						<li><a href="#">Rating</a></li>
-						<li><a href="#">Price ↓</a></li>
-					</ul>
-				</div>
+				<ul class="list-cat">
+					<li class="active"><a href="#">From 1k</a></li>
+					<li><a href="#">From 29K</a></li>
+					<li><a href="#">From 59K</a></li>
+					<li><a href="#">From 99K</a></li>
+				</ul>
 
 				<div class="boxes wrap margin-b10 fix-both-side">
 					<div class="box-p">
