--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -115,6 +115,8 @@
 						<li><a href="NEW_DESIGN/mobile/store-featured.html">Featured Store</a></li>
 						<li><a href="NEW_DESIGN/mobile/list-all-category.html">List All Category</a></li>
 						<li><a href="NEW_DESIGN/mobile/brand-item.html">Brand Item</a></li>
+						<li><a href="NEW_DESIGN/mobile/brand-not-found.html">Brand Not Found</a></li>
+						<li><a href="NEW_DESIGN/mobile/from-1k.html">From 1K</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
