3B - NEW_DESIGN - PRODUCT_BY_CATEGORY_MOBILE - update breadcrumb style

--- a/3B-WEB/NEW_DESIGN/mobile/search-product-by-category.html
+++ b/3B-WEB/NEW_DESIGN/mobile/search-product-by-category.html
@@ -126,10 +126,12 @@
 		<!-- /END HEADER -->
 
 		<!-- BEGIN BREADCRUMB -->
-		<div class="breadcrumb">
+		<div class="breadcrumb scroll-x">
 			<ul>
 				<li><a href="home.html">Trang chủ</a></li>
-				<li>Tìm kiếm sản phẩm theo danh mục</li>
+				<li><a href="#" class="wrap-line">Đồ vải gia đình</a></li>
+				<li><a href="#" class="wrap-line">Máy hút bụi & thiết bị làm sạch</a></li>
+				<li class="wrap-line">Máy hút bụi công nghiệp</li>
 			</ul>
 		</div>
 		<!-- /END BREADCRUMB -->
