--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -111,12 +111,12 @@
 						<li><a href="NEW_DESIGN/mobile/search-not-found.html">Search Not Found</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-hot-today.html">Product Hot Today</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-recommend.html">Product Recommend</a></li>
-						<!-- <li><a href="NEW_DESIGN/mobile/product-details.html">Product Details</a></li> -->
 						<li><a href="NEW_DESIGN/mobile/store-featured.html">Featured Store</a></li>
 						<li><a href="NEW_DESIGN/mobile/list-all-category.html">List All Category</a></li>
 						<li><a href="NEW_DESIGN/mobile/brand-item.html">Brand Item</a></li>
 						<li><a href="NEW_DESIGN/mobile/brand-not-found.html">Brand Not Found</a></li>
 						<li><a href="NEW_DESIGN/mobile/from-1k.html">From 1K</a></li>
+						<li><a href="NEW_DESIGN/mobile/product-details.html">Product Details</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
