3B - NEW_DESIGN - FLASH_SALE_MOBILE - add flash-sale-ongoing + flash-sale-upcoming pages

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -117,6 +117,8 @@
 						<li><a href="NEW_DESIGN/mobile/brand-not-found.html">Brand Not Found</a></li>
 						<li><a href="NEW_DESIGN/mobile/from-1k.html">From 1K</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-details.html">Product Details</a></li>
+						<li><a href="NEW_DESIGN/mobile/flash-sale-ongoing.html">Flash Sale Ongoing</a></li>
+						<li><a href="NEW_DESIGN/mobile/flash-sale-upcoming.html">Flash Sale Upcoming</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
