--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -111,7 +111,7 @@
 						<li><a href="NEW_DESIGN/mobile/search-not-found.html">Search Not Found</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-hot-today.html">Product Hot Today</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-recommend.html">Product Recommend</a></li>
-						<li><a href="NEW_DESIGN/mobile/store-featured.html">Featured Store</a></li>
+						<li><a href="NEW_DESIGN/mobile/store-featured.html">Store Featured</a></li>
 						<li><a href="NEW_DESIGN/mobile/list-all-category.html">List All Category</a></li>
 						<li><a href="NEW_DESIGN/mobile/brand-item.html">Brand Item</a></li>
 						<li><a href="NEW_DESIGN/mobile/brand-not-found.html">Brand Not Found</a></li>
@@ -119,6 +119,9 @@
 						<li><a href="NEW_DESIGN/mobile/product-details.html">Product Details</a></li>
 						<li><a href="NEW_DESIGN/mobile/flash-sale-ongoing.html">Flash Sale Ongoing</a></li>
 						<li><a href="NEW_DESIGN/mobile/flash-sale-upcoming.html">Flash Sale Upcoming</a></li>
+						<li><a href="NEW_DESIGN/mobile/store-home.html">Store Home</a></li>
+						<li><a href="NEW_DESIGN/mobile/store-search-product.html">Store Search Product</a></li>
+						<li><a href="NEW_DESIGN/mobile/store-view-product-by-category.html">Store View Product By Category</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
