3B - NEW_DESIGN - OUTLET_MOBILE - add outlet page

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -122,6 +122,7 @@
 						<li><a href="NEW_DESIGN/mobile/store-home.html">Store Home</a></li>
 						<li><a href="NEW_DESIGN/mobile/store-search-product.html">Store Search Product</a></li>
 						<li><a href="NEW_DESIGN/mobile/store-view-product-by-category.html">Store View Product By Category</a></li>
+						<li><a href="NEW_DESIGN/mobile/outlet.html">Outlet</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
