--- a/3B-WEB/NEW_DESIGN/mobile/store-list-category.html
+++ b/3B-WEB/NEW_DESIGN/mobile/store-list-category.html
@@ -202,175 +202,39 @@
 			</div><!-- /end nav -->
 
 			<div class="results container">
-				<!-- BEGIN CONTROL RESULT -->
-				<div class="boxes wrap margin-b20">
-					<div class="title"><h3>Tất cả sản phẩm (1200)</h3></div>
-					<div class="filter-bl boxes wrap">
-						<div class="filter small">
-							<label>Sort by:</label>
-
-							<select class="box-control slb">
-								<option value="0">No Sort</option>
-								<option value="1" selected>Newest</option>
-								<option value="2">Average Rating</option>
-								<option value="3">Popularity</option>
-								<option value="4">Newess</option>
-								<option value="5">Product Name: Z</option>
-							</select>
-
-							<select class="box-control slb">
-								<option value="0">No Sort</option>
-								<option value="1" selected>Price &#8593;</option>
-								<option value="2">Price &#8595;</option>
-							</select>
-						</div>
-					</div>
-				</div>
-				<!-- /END CONTROL RESULT -->
-
-				<div class="list-result">
-					<div class="boxes wrap fix-both-side">
-						<div class="box-p">
-							<div class="box-p-wrap">
-								<div class="box-p-img">
-									<a href="#"><img src="../../assets/images/img29.jpg"></a>
-									<span class="rating-label">-50%</span>
-								</div>
-								<div class="box-p-meta">
-									<div class="store-info">
-										<div class="store-name">
-											<img src="../../assets/images/img30.jpg">
-											<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-										</div>
-									</div>
-									<div class="p-name">
-										<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-										<span class="p-price wrap-line w-break">1.125.000đ</span>
-									</div>
-									<div class="p-rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
-										<span class="count">(200 ratings)</span>
-									</div>
-								</div>
-							</div>
-						</div><!-- /end product -->
-
-						<div class="box-p">
-							<div class="box-p-wrap">
-								<div class="box-p-img">
-									<a href="#"><img src="../../assets/images/img29.jpg"></a>
-									<span class="rating-label">-50%</span>
-								</div>
-								<div class="box-p-meta">
-									<div class="store-info">
-										<div class="store-name">
-											<img src="../../assets/images/img30.jpg">
-											<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-										</div>
-									</div>
-									<div class="p-name">
-										<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-										<span class="p-price wrap-line w-break">189,000đ - 195,000đ</span>
-									</div>
-									<div class="p-rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
-										<span class="count">(200 ratings)</span>
-									</div>
-								</div>
-							</div>
-						</div><!-- /end product -->
-
-						<div class="box-p">
-							<div class="box-p-wrap">
-								<div class="box-p-img">
-									<a href="#"><img src="../../assets/images/img30.jpg"></a>
-									<span class="rating-label">-50%</span>
-								</div>
-								<div class="box-p-meta">
-									<div class="store-info">
-										<div class="store-name">
-											<img src="../../assets/images/img30.jpg">
-											<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-										</div>
-									</div>
-									<div class="p-name">
-										<a href="#"><h4 class="wrap-line twoline">Ngắn vch</h4></a>
-										<span class="p-price wrap-line w-break">100,989,000đ - 290,195,000đ</span>
-									</div>
-									<div class="p-rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
-										<span class="count">(200 ratings)</span>
-									</div>
-								</div>
-							</div>
-						</div><!-- /end product -->
-
-						<div class="box-p">
-							<div class="box-p-wrap">
-								<div class="box-p-img">
-									<a href="#"><img src="../../assets/images/img30.jpg"></a>
-									<span class="rating-label">-50%</span>
-								</div>
-								<div class="box-p-meta">
-									<div class="store-info">
-										<div class="store-name">
-											<img src="../../assets/images/img30.jpg">
-											<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-										</div>
-									</div>
-									<div class="p-name">
-										<a href="#"><h4 class="wrap-line twoline">Dài vừa vừa những cũng 2 dòng</h4></a>
-										<span class="p-price wrap-line w-break">1,089,000đ - 2,195,000đ</span>
-									</div>
-									<div class="p-rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
-										<span class="count">(200 ratings)</span>
-									</div>
-								</div>
-							</div>
-						</div><!-- /end product -->
-
-						<div class="box-p">
-							<div class="box-p-wrap">
-								<div class="box-p-img">
-									<a href="#"><img src="../../assets/images/img29.jpg"></a>
-									<span class="rating-label">-50%</span>
-								</div>
-								<div class="box-p-meta">
-									<div class="store-info">
-										<div class="store-name">
-											<img src="../../assets/images/img30.jpg">
-											<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-										</div>
-									</div>
-									<div class="p-name">
-										<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-										<span class="p-price wrap-line w-break">101.125.000đ</span>
-									</div>
-									<div class="p-rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
-										<span class="count">(200 ratings)</span>
-									</div>
-								</div>
-							</div>
-						</div><!-- /end product -->
-					</div><!-- /end boxes -->
-
-					<!-- BEGIN PAGINATION -->
-					<ul class="pagi">
-						<li><a href="#"><i class="fa fa-angle-left"></i></a></li>
-						<li><a href="#"><span>1</span></a></li>
-						<li><a href="#"><span>2</span></a></li>
-						<li><a href="#"><span>3</span></a></li>
-						<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-					</ul>
-					<!-- /END PAGINATION -->
-				</div>				
+				<div class="title"><h3>Tất cả danh mục</h3></div>
+				<ul class="list-category">
+					<li>
+						<a href="#">
+							<img src="../../assets/images/img29.jpg">
+							<label class="wrap-line">Lorem isum dolor set amit Lorem isum dolor set amit</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="../../assets/images/img30.jpg">
+							<label class="wrap-line">Lorem isum dolor set amit Lorem isum dolor set amit</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="../../assets/images/img29.jpg">
+							<label class="wrap-line">Lorem isum dolor set amit Lorem isum dolor set amit</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="../../assets/images/img25.png">
+							<label class="wrap-line">Lorem isum dolor set am</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="../../assets/images/img24.png">
+							<label class="wrap-line">Lorem isum set amit</label>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 
