--- a/3B-WEB/NEW_DESIGN/mobile/flash-sale-ongoing.html
+++ b/3B-WEB/NEW_DESIGN/mobile/flash-sale-ongoing.html
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="col-xs-2">
 						<!-- BEGIN LOGO -->
-						<h1 class="logo txt-center"><a href="index.html"><img src="../../assets/images/new-design/icons-svg/logo-3b.svg"></a></h1>
+						<h1 class="logo txt-center"><a href="home.html"><img src="../../assets/images/new-design/icons-svg/logo-3b.svg"></a></h1>
 						<!-- /END LOGO -->
 					</div>
 					<div class="col-xs-7">
