--- a/3B-WEB/NEW_DESIGN/mobile/store-home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/store-home.html
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="col-xs-2">
 						<!-- BEGIN LOGO -->
-						<h1 class="logo txt-center"><a href="index.html"><img src="../../assets/images/new-design/icons-svg/logo-3b.svg"></a></h1>
+						<h1 class="logo txt-center"><a href="home.html"><img src="../../assets/images/new-design/icons-svg/logo-3b.svg"></a></h1>
 						<!-- /END LOGO -->
 					</div>
 					<div class="col-xs-7">
@@ -197,7 +197,7 @@
 					<li><a href="store-home.html">Shop</a></li>
 					<li><a href="store-all-product.html">Sản phẩm</a></li>
 					<li><a href="store-best-selling.html">Sản phẩm bán chạy</a></li>
-					<li><a href="#">Danh mục</a></li>
+					<li><a href="store-list-category.html">Danh mục</a></li>
 				</ul>
 			</div><!-- /end nav -->
 
