3B - NEW_DESIGN - SHOPPING_CART_MOBILE - add shopping-cart page

--- a/3B-WEB/NEW_DESIGN/mobile/product-details.html
+++ b/3B-WEB/NEW_DESIGN/mobile/product-details.html
@@ -1188,7 +1188,7 @@
 							</div>
 						</div>
 
-						<a href="#" class="btn btn-gradient">Mua ngay</a>
+						<a href="shopping-cart.html" class="btn btn-gradient">Mua ngay</a>
 					</div>
 				</div>
 			</div>
@@ -1238,7 +1238,7 @@
 				<div class="control boxes">
 					<a href="#" class="btn btn-addtocart" data-toggle="modal" data-target="#addsuccessModal" data-dismiss="modal">Thêm giỏ hàng</a>
 
-					<a href="#" class="btn btn-gradient">Mua ngay</a>
+					<a href="shopping-cart.html" class="btn btn-gradient">Mua ngay</a>
 				</div>
 			</div>
 		</div>
