--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -124,6 +124,7 @@
 						<li><a href="NEW_DESIGN/mobile/store-view-product-by-category.html">Store View Product By Category</a></li>
 						<li><a href="NEW_DESIGN/mobile/store-list-category.html">Store List category</a></li>
 						<li><a href="NEW_DESIGN/mobile/outlet.html">Outlet</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-cart.html">Shopping Cart</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
