3B - NEW_DESIGN - SHOPPING_CHECKOUT_MOBILE - add shopping-checkout page

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -125,6 +125,7 @@
 						<li><a href="NEW_DESIGN/mobile/store-list-category.html">Store List category</a></li>
 						<li><a href="NEW_DESIGN/mobile/outlet.html">Outlet</a></li>
 						<li><a href="NEW_DESIGN/mobile/shopping-cart.html">Shopping Cart</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-checkout.html">Shopping Checkout</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
