--- a/3B-NEW/seller-discount-add-product.html
+++ b/3B-NEW/seller-discount-add-product.html
@@ -276,7 +276,7 @@
 												<span>Tất cả sản phẩm</span>
 											</label>
 										</li>
-										<li class="cd-accordion__item cd-accordion__item--has-children">
+										<li class="cd-accordion__item cd-accordion__item--has-children active">
 											<input class="cd-accordion__input" type="checkbox" name ="group-1" id="group-1">
 											<label class="cd-accordion__label cd-accordion__label--icon-folder" for="group-1">
 												<span>Ngành hàng</span>
