--- a/3B-WEB/NEW_DESIGN/mobile/shopping-checkout.html
+++ b/3B-WEB/NEW_DESIGN/mobile/shopping-checkout.html
@@ -379,17 +379,32 @@
 				<a href="shopping-checkout-select-voucher.html">Lựa chọn Voucher <i class="fa fa-angle-right"></i></a>
 			</div>
 
+			<div class="coin3b boxes">
+				<label>Use 3B Coin <span>(- max 5,500đ)</span></label>
+				<button type="button" class="btn btn-sm btn-toggle active" data-toggle="button" aria-pressed="true" autocomplete="off">
+					<div class="handle"></div>
+				</button>
+			</div>
+
 			<div class="cart-total container">
+				<div class="boxes normal">
+					<label>Tổng phí vận chuyển</label>
+					<label class="numb">30,000đ</label>
+				</div>
+				<div class="boxes normal">
+					<label>Giảm giá bằng 3B Xu</label>
+					<label class="numb">5,000đ</label>
+				</div>
 				<div class="boxes">
 					<label>Tổng</label>
 					<label class="numb txt-red">390,195,000đ</label>
 				</div>
-				<div class="boxes">
-					<label>Số lượng</label>
-					<label class="numb">10 sản phẩm</label>
+				<div class="boxes normal">
+					<label>Nhận được</label>
+					<label class="numb bold">+100 Coin</label>
 				</div>
 
-				<a href="#" class="btn btn-gradient">Mua hàng</a>
+				<a href="#" class="btn btn-gradient order">Đặt hàng</a>
 			</div>
 		</div>
 
