--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -126,6 +126,8 @@
 						<li><a href="NEW_DESIGN/mobile/outlet.html">Outlet</a></li>
 						<li><a href="NEW_DESIGN/mobile/shopping-cart.html">Shopping Cart</a></li>
 						<li><a href="NEW_DESIGN/mobile/shopping-checkout.html">Shopping Checkout</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-checkout-select-voucher.html">Shopping Checkout Select Voucher</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-checkout-voucher-empty.html">Shopping Checkout Voucher Empty</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
