3B - NEW_DESIGN - add all page messages

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -128,6 +128,12 @@
 						<li><a href="NEW_DESIGN/mobile/shopping-checkout.html">Shopping Checkout</a></li>
 						<li><a href="NEW_DESIGN/mobile/shopping-checkout-select-voucher.html">Shopping Checkout Select Voucher</a></li>
 						<li><a href="NEW_DESIGN/mobile/shopping-checkout-voucher-empty.html">Shopping Checkout Voucher Empty</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-checkout-select-address.html">Shopping Checkout Select Address</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-checkout-select-address-add.html">Shopping Checkout Select Address Add</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-checkout-change-address.html">Shopping Checkout Change Address</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-order-confirm.html">Shopping Order Confirm</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-order-success.html">Shopping Order Success</a></li>
+						<li><a href="NEW_DESIGN/mobile/shopping-order-fail.html">Shopping Order Fail</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
