--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -134,6 +134,7 @@
 						<li><a href="NEW_DESIGN/mobile/shopping-order-confirm.html">Shopping Order Confirm</a></li>
 						<li><a href="NEW_DESIGN/mobile/shopping-order-success.html">Shopping Order Success</a></li>
 						<li><a href="NEW_DESIGN/mobile/shopping-order-fail.html">Shopping Order Fail</a></li>
+						<li><a href="NEW_DESIGN/mobile/pin-code.html">Pin Code</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
