3B - update seller order admin - add search form

--- a/3B-NEW/seller-order-canceled.html
+++ b/3B-NEW/seller-order-canceled.html
@@ -267,6 +267,19 @@
 					</div>
 				</div>
 
+				<div class="buyer-order">
+					<div class="filter">
+						<div class="row">
+							<div class="col-md-8">
+								<input type="text" name="search" class="form-control" placeholder="Tìm kiếm theo tên shop, mã sản phẩm, tên sản phẩm">
+							</div>
+							<div class="col-md-4">
+								<a href="#" class="btn btn-flat btn-danger">Tìm kiếm</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="cart-block">
 					<!-- BEGIN CART LIST -->
 					<div class="cart-list">
