3B - NEW_DESIGN - LOGIN_PAGE_MOBILE - add login page

--- a/3B-NEW/admin-statistic-report.html
+++ b/3B-NEW/admin-statistic-report.html
@@ -751,7 +751,8 @@
 		(function($){
 			$(function(){
 				$('.input-daterange').datepicker({
-					format: "dd/mm/yyyy"
+					format: "dd/mm/yyyy",
+					todayHighlight: true,
 				});
 
 				// Chart Order
