--- a/3B-NEW/seller-wallet3b-transaction-history.html
+++ b/3B-NEW/seller-wallet3b-transaction-history.html
@@ -253,7 +253,19 @@
 			<section class="content">
 				<div class="content-block">
 					<div class="head">
-						<h3>Ví 3B - Transaction History</h3>
+						<div class="row">
+							<div class="col-md-6">
+								<h3 class="pull-left" style="line-height: 38px;">Ví 3B - Transaction History</h3>
+								<div class="pull-right">
+									<select class="form-control">
+										<option selected="selected">Tất cả</option>
+										<option>Giao dịch tiền vào</option>
+										<option>Giao dịch tiền ra</option>
+									</select>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+						</div>
 					</div>
 					<!-- BEGIN BODY -->
 					<div class="body wallet3b">
